<resources>
    <string name="app_name">HMS</string>
    <string-array name="roles">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_here">"Welcome to our hospital!"</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="order">Order</string>
    <string name="inbox">Inbox</string>
    <string name="others">Others</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="mostafa_mohamed">Mostafa Mohamed</string>
    <string name="verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mostafa_medhat">mostafa medhat</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="role">role</string>
    <string name="password">password</string>
    <string name="update_photo_from_gallery">Update photo from Gallery</string>
    <string name="update_photo_by_camera">Update photo by camera</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="hire_doctor">Hire Doctor</string>
    <string name="name">name</string>
    <string name="years_exp">years exp</string>
    <string name="specialist">specialist</string>
    <string name="appointment_fee">Appointment fee</string>
    <string name="add">Add</string>
    <string name="specalistis">Specalistis</string>
    <string name="blood_doctors">Blood Doctors</string>
    <string name="brain_doctors">Brain Doctors</string>
    <string name="dentist">Dentist</string>
    <string name="stomache_doctors">Stomache Doctors</string>
    <string name="nerves_doctor">Nerves Doctor</string>
    <string name="neurologist">Neurologist</string>
    <string name="bones_doctor">Bones Doctor</string>
    <string name="choose_a_specialty">Choose a specialty</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="my_appoinments">My Appoinments</string>
    <string name="hepatologist">Hepatologist</string>
    <string name="cardiologist">cardiologist</string>
    <string name="log_out">Log Out</string>
</resources>