<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".HireDoctorActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_lg"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/hire_doctor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="38sp" />

        <EditText
            android:id="@+id/doc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/doc_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/years_exp"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/doc_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/specialist"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/doc_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/appointment_fee"
            android:inputType="number"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_btn"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#00CCCB"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="#040404"
            android:textSize="20sp"

            android:textStyle="normal"
            tools:text="@string/add" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="196dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor" />
</androidx.constraintlayout.widget.ConstraintLayout>